--- a/Draw/BBS/Controller/View/BBSPostDetailCell~ipad.xib
+++ b/Draw/BBS/Controller/View/BBSPostDetailCell~ipad.xib
@@ -37,10 +37,10 @@
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<array class="NSMutableArray" key="NSSubviews">
-					<object class="IBUIImageView" id="849593661">
+					<object class="IBUIImageView" id="282302649">
 						<reference key="NSNextResponder" ref="137148075"/>
 						<int key="NSvFlags">274</int>
-						<string key="NSFrame">{{50, 0}, {245, 175}}</string>
+						<string key="NSFrame">{{116, 0}, {571, 408}}</string>
 						<reference key="NSSuperview" ref="137148075"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="486840761"/>
@@ -56,10 +56,10 @@
 					<object class="IBUIImageView" id="541136629">
 						<reference key="NSNextResponder" ref="137148075"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrameSize">{45, 45}</string>
+						<string key="NSFrameSize">{105, 105}</string>
 						<reference key="NSSuperview" ref="137148075"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="849593661"/>
+						<reference key="NSNextKeyView" ref="282302649"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -67,7 +67,7 @@
 					<object class="IBUILabel" id="486840761">
 						<reference key="NSNextResponder" ref="137148075"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{78, 8}, {124, 21}}</string>
+						<string key="NSFrame">{{182, 18}, {289, 49}}</string>
 						<reference key="NSSuperview" ref="137148075"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="347190065"/>
@@ -98,8 +98,8 @@
 					</object>
 					<object class="IBUILabel" id="347190065">
 						<reference key="NSNextResponder" ref="137148075"/>
-						<int key="NSvFlags">289</int>
-						<string key="NSFrame">{{204, 6}, {86, 21}}</string>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{476, 14}, {200, 49}}</string>
 						<reference key="NSSuperview" ref="137148075"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="4494878"/>
@@ -127,8 +127,8 @@
 					</object>
 					<object class="IBUILabel" id="4494878">
 						<reference key="NSNextResponder" ref="137148075"/>
-						<int key="NSvFlags">288</int>
-						<string key="NSFrame">{{78, 30}, {206, 45}}</string>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{182, 70}, {480, 105}}</string>
 						<reference key="NSSuperview" ref="137148075"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="388531300"/>
@@ -146,26 +146,26 @@
 						<reference key="IBUIFontDescription" ref="840890357"/>
 						<reference key="IBUIFont" ref="542743155"/>
 						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
-						<double key="preferredMaxLayoutWidth">206</double>
+						<double key="preferredMaxLayoutWidth">480</double>
 					</object>
 					<object class="IBUIImageView" id="388531300">
 						<reference key="NSNextResponder" ref="137148075"/>
 						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{78, 70}, {85, 80}}</string>
+						<string key="NSFrame">{{182, 163}, {198, 186}}</string>
 						<reference key="NSSuperview" ref="137148075"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="98891893"/>
+						<reference key="NSNextKeyView" ref="398745346"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
-					<object class="IBUIButton" id="98891893">
+					<object class="IBUIButton" id="398745346">
 						<reference key="NSNextResponder" ref="137148075"/>
 						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{250, 155}, {40, 15}}</string>
+						<string key="NSFrame">{{396, 364}, {93, 35}}</string>
 						<reference key="NSSuperview" ref="137148075"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
+						<reference key="NSNextKeyView" ref="1041555073"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -180,7 +180,7 @@
 						<double key="IBUIImageEdgeInsets.left">0.0</double>
 						<double key="IBUIImageEdgeInsets.right">23</double>
 						<string key="IBUINormalTitle">300</string>
-						<object class="NSColor" key="IBUIHighlightedTitleColor">
+						<object class="NSColor" key="IBUIHighlightedTitleColor" id="641099693">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MQA</bytes>
 						</object>
@@ -188,7 +188,7 @@
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
 						</object>
-						<object class="NSColor" key="IBUINormalTitleShadowColor">
+						<object class="NSColor" key="IBUINormalTitleShadowColor" id="652450112">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MC41AA</bytes>
 						</object>
@@ -206,8 +206,76 @@
 							<int key="NSfFlags">16</int>
 						</object>
 					</object>
+					<object class="IBUIButton" id="1041555073">
+						<reference key="NSNextResponder" ref="137148075"/>
+						<int key="NSvFlags">268</int>
+						<string key="NSFrame">{{490, 364}, {93, 35}}</string>
+						<reference key="NSSuperview" ref="137148075"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="54734587"/>
+						<string key="NSReuseIdentifierKey">_NS:9</string>
+						<bool key="IBUIOpaque">NO</bool>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<int key="IBUIContentHorizontalAlignment">0</int>
+						<int key="IBUIContentVerticalAlignment">0</int>
+						<double key="IBUITitleEdgeInsets.top">0.0</double>
+						<double key="IBUITitleEdgeInsets.bottom">0.0</double>
+						<double key="IBUITitleEdgeInsets.left">-6</double>
+						<double key="IBUITitleEdgeInsets.right">0.0</double>
+						<double key="IBUIImageEdgeInsets.top">0.0</double>
+						<double key="IBUIImageEdgeInsets.bottom">0.0</double>
+						<double key="IBUIImageEdgeInsets.left">0.0</double>
+						<double key="IBUIImageEdgeInsets.right">23</double>
+						<string key="IBUINormalTitle">1234</string>
+						<reference key="IBUIHighlightedTitleColor" ref="641099693"/>
+						<object class="NSColor" key="IBUINormalTitleColor" id="799360236">
+							<int key="NSColorSpace">3</int>
+							<bytes key="NSWhite">MC4zMzMzMzMzMzMzAA</bytes>
+						</object>
+						<reference key="IBUINormalTitleShadowColor" ref="652450112"/>
+						<object class="NSCustomResource" key="IBUINormalImage">
+							<string key="NSClassName">NSImage</string>
+							<string key="NSResourceName">bbs_post_support@2x.png</string>
+						</object>
+						<object class="IBUIFontDescription" key="IBUIFontDescription" id="61512265">
+							<int key="type">1</int>
+							<double key="pointSize">9</double>
+						</object>
+						<object class="NSFont" key="IBUIFont" id="388125942">
+							<string key="NSName">Helvetica</string>
+							<double key="NSSize">9</double>
+							<int key="NSfFlags">16</int>
+						</object>
+					</object>
+					<object class="IBUIButton" id="54734587">
+						<reference key="NSNextResponder" ref="137148075"/>
+						<int key="NSvFlags">268</int>
+						<string key="NSFrame">{{583, 364}, {93, 35}}</string>
+						<reference key="NSSuperview" ref="137148075"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
+						<string key="NSReuseIdentifierKey">_NS:9</string>
+						<bool key="IBUIOpaque">NO</bool>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<int key="IBUIContentHorizontalAlignment">0</int>
+						<int key="IBUIContentVerticalAlignment">0</int>
+						<double key="IBUITitleEdgeInsets.top">0.0</double>
+						<double key="IBUITitleEdgeInsets.bottom">0.0</double>
+						<double key="IBUITitleEdgeInsets.left">-6</double>
+						<double key="IBUITitleEdgeInsets.right">0.0</double>
+						<double key="IBUIImageEdgeInsets.top">0.0</double>
+						<double key="IBUIImageEdgeInsets.bottom">0.0</double>
+						<double key="IBUIImageEdgeInsets.left">0.0</double>
+						<double key="IBUIImageEdgeInsets.right">23</double>
+						<string key="IBUINormalTitle">99999</string>
+						<reference key="IBUIHighlightedTitleColor" ref="641099693"/>
+						<reference key="IBUINormalTitleColor" ref="799360236"/>
+						<reference key="IBUINormalTitleShadowColor" ref="652450112"/>
+						<reference key="IBUIFontDescription" ref="61512265"/>
+						<reference key="IBUIFont" ref="388125942"/>
+					</object>
 				</array>
-				<string key="NSFrameSize">{300, 185}</string>
+				<string key="NSFrameSize">{700, 432}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="541136629"/>
@@ -267,9 +335,25 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">support</string>
+						<reference key="source" ref="137148075"/>
+						<reference key="destination" ref="1041555073"/>
+					</object>
+					<int key="connectionID">27</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">comment</string>
+						<reference key="source" ref="137148075"/>
+						<reference key="destination" ref="54734587"/>
+					</object>
+					<int key="connectionID">28</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">bgImageView</string>
 						<reference key="source" ref="137148075"/>
-						<reference key="destination" ref="849593661"/>
+						<reference key="destination" ref="282302649"/>
 					</object>
 					<int key="connectionID">35</int>
 				</object>
@@ -277,9 +361,27 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">reward</string>
 						<reference key="source" ref="137148075"/>
-						<reference key="destination" ref="98891893"/>
+						<reference key="destination" ref="398745346"/>
 					</object>
 					<int key="connectionID">36</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">clickSupportButton:</string>
+						<reference key="source" ref="1041555073"/>
+						<reference key="destination" ref="137148075"/>
+						<int key="IBEventType">7</int>
+					</object>
+					<int key="connectionID">29</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">clickCommentButton:</string>
+						<reference key="source" ref="54734587"/>
+						<reference key="destination" ref="137148075"/>
+						<int key="IBEventType">7</int>
+					</object>
+					<int key="connectionID">30</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -310,8 +412,10 @@
 							<reference ref="347190065"/>
 							<reference ref="4494878"/>
 							<reference ref="388531300"/>
-							<reference ref="849593661"/>
-							<reference ref="98891893"/>
+							<reference ref="282302649"/>
+							<reference ref="1041555073"/>
+							<reference ref="54734587"/>
+							<reference ref="398745346"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -336,13 +440,23 @@
 						<reference key="parent" ref="137148075"/>
 					</object>
 					<object class="IBObjectRecord">
+						<int key="objectID">20</int>
+						<reference key="object" ref="1041555073"/>
+						<reference key="parent" ref="137148075"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">21</int>
+						<reference key="object" ref="54734587"/>
+						<reference key="parent" ref="137148075"/>
+					</object>
+					<object class="IBObjectRecord">
 						<int key="objectID">33</int>
-						<reference key="object" ref="849593661"/>
+						<reference key="object" ref="282302649"/>
 						<reference key="parent" ref="137148075"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">34</int>
-						<reference key="object" ref="98891893"/>
+						<reference key="object" ref="398745346"/>
 						<reference key="parent" ref="137148075"/>
 					</object>
 					<object class="IBObjectRecord">
@@ -360,7 +474,11 @@
 				<string key="16.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="17.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="18.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="3.CustomClassName">BBSPostDetailCell</string>
+				<string key="20.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<real value="1" key="20.IBUIButtonInspectorSelectedEdgeInsetMetadataKey"/>
+				<string key="21.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<real value="1" key="21.IBUIButtonInspectorSelectedEdgeInsetMetadataKey"/>
+				<string key="3.CustomClassName">BBSPostCell</string>
 				<string key="3.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="33.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="34.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -376,7 +494,7 @@
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
 				<object class="IBPartialClassDescription">
-					<string key="className">BBSPostDetailCell</string>
+					<string key="className">BBSPostCell</string>
 					<string key="superclassName">BBSTableViewCell</string>
 					<dictionary class="NSMutableDictionary" key="actions">
 						<string key="clickCommentButton:">id</string>
@@ -393,11 +511,16 @@
 						</object>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="bgImageView">UIImageView</string>
 						<string key="comment">UIButton</string>
 						<string key="reward">UIButton</string>
 						<string key="support">UIButton</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="bgImageView">
+							<string key="name">bgImageView</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
 						<object class="IBToOneOutletInfo" key="comment">
 							<string key="name">comment</string>
 							<string key="candidateClassName">UIButton</string>
@@ -413,7 +536,7 @@
 					</dictionary>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/BBSPostDetailCell.h</string>
+						<string key="minorKey">./Classes/BBSPostCell.h</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
@@ -421,7 +544,6 @@
 					<string key="superclassName">PPTableViewCell</string>
 					<dictionary class="NSMutableDictionary" key="outlets">
 						<string key="avatar">UIImageView</string>
-						<string key="bgImageView">UIImageView</string>
 						<string key="content">UILabel</string>
 						<string key="image">UIImageView</string>
 						<string key="nickName">UILabel</string>
@@ -430,10 +552,6 @@
 					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
 						<object class="IBToOneOutletInfo" key="avatar">
 							<string key="name">avatar</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="bgImageView">
-							<string key="name">bgImageView</string>
 							<string key="candidateClassName">UIImageView</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="content">
@@ -475,6 +593,7 @@
 		<dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
 			<string key="bbs_post_content_bg@2x.png">{165, 160}</string>
 			<string key="bbs_post_reward@2x.png">{24, 29}</string>
+			<string key="bbs_post_support@2x.png">{24, 29}</string>
 		</dictionary>
 		<string key="IBCocoaTouchPluginVersion">1926</string>
 	</data>
